--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           paths:
           - ~/.m2
           - ~/.lein
-          key: lein-git-deps-{{ checksum "project.clj" }}
+          key: lein-git-down-{{ checksum "project.clj" }}
       - persist_to_workspace:
           root: ./
           paths:
@@ -25,7 +25,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: lein-git-deps-{{ checksum "project.clj" }}
+          key: lein-git-down-{{ checksum "project.clj" }}
       - attach_workspace:
           at: ./
       - run:
